Bug 169851 - [26.2] In the cell formatting dialog, you might forget the name of the last used palette for background color
Summary: [26.2] In the cell formatting dialog, you might forget the name of the last u...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Color-Palettes
  Show dependency treegraph
 
Reported: 2025-12-05 23:57 UTC by nobu
Modified: 2025-12-16 17:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-12-05 23:57:39 UTC
Description:
In the cell formatting dialog, you might forget the name of the last used palette for background color.

Steps to Reproduce:
1. Open new Calc.
2. Select Cell [A1].
3. Open Format Cells Dialog. ( Ctrl + 1 )
4. Set background color.
   Select Last Palette in Drop-down list.
   (It should probably be set to "Document colors")
   Select Black ( maybe top left )
   OK
5. Select Cell [A1], and reopen the Dialog.
   See Palette drop-down of background color.

Actual Results:
6. The displayed palette name is "Compatibility" in Windows-OS.
                                 "LibreOffice" in Linux-OS?
   or, Instead of "Document colors", a different palette name appears.

Expected Results:
6. The displayed palette name is "Document colors".


Reproducible: Always


User Profile Reset: No

Additional Info:

The order of items in the list may vary depending on the language used.
For clarity, we recommend selecting either black or white from the palette listed below.

It appears to search for the same color and display the top palette name that includes that color, excluding "Custom".

Therefore, even if you register "Black" under "Custom" and select it, the palette name won't become "Custom" when you open it next.

You can't properly utilize your custom palette.

When selecting an unconfigured cell [A2] in step [5.] to set a new background color, the last used palette name will be displayed.

This issue seems to occur when the background color has already been set.

Reproducible
[2025-11-14]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible
[2025-12-05]
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0686b1972806fe8b711de5ba64039fb38cd14889
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

===

Not reproducible
[2025-10-13]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d60ff8c8bd4e3ebf8f84f53448ead3c838332ea9
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 m_a_riosv 2025-12-06 23:07:26 UTC
Reproducible
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 2 Saburo 2025-12-08 03:01:00 UTC
bibisected with linux-64-26.2
I applied 'black' from the 'Standard' palette, but when I reopened it, it became the 'compatibility' palette.
I applied 'white' from the 'Standard' palette, but when I reopened it, it became the 'HTML' palette.

commit 676892af95079d00c19527b94396aacf4136bf0d
author	Jim Raykowski

related tdf#163347: sync color table with active color

***
adding CC: Jim Raykowski
Please, take a look?
Comment 3 Jim Raykowski 2025-12-09 06:25:55 UTC
Hi all,

Here's a second attempt at this:
https://gerrit.libreoffice.org/c/core/+/195265

This time if the 'Active' color isn't found in the current palette (last palette used) color table, searching other palettes for the color is not done. It simply does not select any color item in the palette color table.

An example of the 'Active' color not being found in the current palette color table:

1. Assign a background color to a cell from the 'Standard' palette that isn't in the 'LibreOffice' palette, say Red ff0000.
2. Assign a background color to a different cell from the 'LibreOffice' palette, any color will do.
3. Open the background color tab page for the cell in step 1.

Results: The color table for the 'LibreOffice' palette is shown with no selected color in the table because the background color for the cell, the 'Active' color' was set in step 1 to not be a color in the 'LibreOffice' palette.
Comment 4 Commit Notification 2025-12-10 01:24:23 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8c3fc56d37a557cf34a2a8a918eabd8811177514

tdf#169851 sync color table with active color

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-11 08:31:43 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/2dc2444fed56ba50353cd150634a443a379ed706

tdf#169851 sync color table with active color

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.